--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "RACunderskrt",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.17.2"
